@@ -1,11 +1,21 @@
 package es.cesguiro.usecase.book.query.mapper;
 
+import es.cesguiro.locale.LocaleProvider;
+import es.cesguiro.locale.LocaleUtil;
 import es.cesguiro.model.Author;
 import es.cesguiro.model.Book;
+import es.cesguiro.model.vo.LocaleString;
 import es.cesguiro.repository.model.BookEntity;
+import es.cesguiro.usecase.book.query.data.AuthorData;
+import es.cesguiro.usecase.book.query.data.BookData;
 import es.cesguiro.usecase.book.query.model.BookCollectionQuery;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.math.BigDecimal;
 import java.time.LocalDate;
@@ -13,35 +23,42 @@ import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.when;
 
+@ExtendWith(MockitoExtension.class)
 class BookMapperTest {
+
+    @Mock
+    private LocaleProvider mockLocaleProvider;
+
+    @BeforeEach
+    void setup() {
+        LocaleUtil.resetInstance();
+        LocaleUtil.getInstance(mockLocaleProvider);
+    }
+
+    @AfterEach
+    void teardown() {
+        LocaleUtil.resetInstance();
+    }
 
     @Test
     @DisplayName("Test map BookEntity to Book")
     void toBook() {
-        // Arrange
-        BookEntity bookEntity = new BookEntity(
-                "123456789",
-                "Book Title",
-                "Book Synopsis",
-                new BigDecimal("29.99"),
-                0.1,
-                "cover.jpg",
-                LocalDate.of(2023, 1, 1)
-        );
+        BookEntity bookEntity = BookData.getBookEntity(0);
 
-        // Act
-        Book book = BookMapper.toBook(bookEntity);
+        Book result = BookMapper.toBook(bookEntity);
 
-        // Assert
         assertAll(
-                () -> assertEquals(bookEntity.isbn(), book.getIsbn(), "ISBNs should match"),
-                () -> assertEquals(bookEntity.title(), book.getTitle(), "Titles should match"),
-                () -> assertEquals(bookEntity.synopsis(), book.getSynopsis(), "Synopses should match"),
-                () -> assertEquals(bookEntity.basePrice(), book.getBasePrice(), "Base prices should match"),
-                () -> assertEquals(bookEntity.discountPercentage(), book.getDiscountPercentage(), "Discounts should match"),
-                () -> assertEquals(bookEntity.cover(), book.getCover(), "Covers should match"),
-                () -> assertEquals(bookEntity.publicationDate(), book.getPublicationDate(), "Publication dates should match")
+                () -> assertEquals(bookEntity.isbn(), result.getIsbn(), "ISBNs should match"),
+                () -> assertEquals(bookEntity.titleEs(), result.getTitle("es"), "Titles should match"),
+                () -> assertEquals(bookEntity.titleEn(), result.getTitle("en"), "Titles should match"),
+                () -> assertEquals(bookEntity.synopsisEs(), result.getSynopsis("es"), "Synopses should match"),
+                () -> assertEquals(bookEntity.synopsisEn(), result.getSynopsis("en"), "Synopses should match"),
+                () -> assertEquals(bookEntity.basePrice(), result.getBasePrice(), "Base prices should match"),
+                () -> assertEquals(bookEntity.discountPercentage(), result.getDiscountPercentage(), "Discounts should match"),
+                () -> assertEquals(bookEntity.cover(), result.getCover(), "Covers should match"),
+                () -> assertEquals(bookEntity.publicationDate(), result.getPublicationDate(), "Publication dates should match")
         );
     }
 
@@ -56,71 +73,85 @@ class BookMapperTest {
     }
 
     @Test
-    @DisplayName("Test map Book to BookCollectionDto")
-    void toBookCollectionDto() {
-        // Arrange
-        Author author1 = new Author("Author 1", "Nationality 1", "Bio 1", 1970, 2000, "slug1");
-        Author author2 = new Author("Author 2", "Nationality 2", "Bio 2", 1980, null, "slug2");
+    @DisplayName("Test map Book to BookCollectionQuery with Locale es")
+    void toBookCollectionQuery() {
+        when(mockLocaleProvider.getLanguage()).thenReturn("es");
 
-        Book book = new Book(
-                "123456789",
-                "Book Title",
-                "Book Synopsis",
-                new BigDecimal("29.99"),
-                0.1,
-                "cover.jpg",
-                LocalDate.of(2023, 1, 1)
-        );
-        book.setAuthors(List.of(author1, author2));
+        Book book = BookData.getBooks().getFirst();
+        book.setAuthors(List.of(AuthorData.getAuthors().getFirst(), AuthorData.getAuthors().get(1)));
 
-        // Act
-        BookCollectionQuery dto = BookMapper.toBookCollectionDto(book);
+        BookCollectionQuery result = BookMapper.toBookCollectionQuery(book);
 
-        // Assert
         assertAll(
-                () -> assertEquals(book.getIsbn(), dto.isbn(), "ISBNs should match"),
-                () -> assertEquals(book.getTitle(), dto.title(), "Titles should match"),
-                () -> assertEquals(book.getBasePrice(), dto.basePrice(), "Base prices should match"),
-                () -> assertEquals(book.getDiscountPercentage(), dto.discount(), "Discounts should match"),
-                () -> assertEquals(book.getCover(), dto.cover(), "Covers should match"),
-                () -> assertEquals(book.calculateFinalPrice(), dto.finalPrice(), "Final prices should match"),
+                () -> assertEquals(book.getIsbn(), result.isbn(), "ISBNs should match"),
+                () -> assertEquals(book.getTitle("es"), result.title(), "Titles should match"),
+                () -> assertEquals(book.getBasePrice(), result.basePrice(), "Base prices should match"),
+                () -> assertEquals(book.getDiscountPercentage(), result.discount(), "Discounts should match"),
+                () -> assertEquals(book.getCover(), result.cover(), "Covers should match"),
+                () -> assertEquals(book.calculateFinalPrice(), result.finalPrice(), "Final prices should match"),
                 () -> assertEquals(
                         book.getAuthors().size(),
-                        dto.authors().size(),
+                        result.authors().size(),
                         "Number of authors should match"
                 )
         );
     }
 
     @Test
-    @DisplayName("Test null Book returns null BookCollectionDto")
-    void toBookCollectionDtoNull() {
-        // Act
-        BookCollectionQuery dto = BookMapper.toBookCollectionDto(null);
+    @DisplayName("Test map Book to BookCollectionQuery with Locale en")
+    void toBookCollectionQueryEn() {
+        when(mockLocaleProvider.getLanguage()).thenReturn("en");
 
-        // Assert
-        assertNull(dto, "Mapping null Book should return null BookCollectionDto");
+        Book book = BookData.getBooks().get(1);
+        book.setAuthors(List.of(AuthorData.getAuthors().get(1), AuthorData.getAuthors().get(2)));
+
+        BookCollectionQuery result = BookMapper.toBookCollectionQuery(book);
+
+        assertAll(
+                () -> assertEquals(book.getIsbn(), result.isbn(), "ISBNs should match"),
+                () -> assertEquals(book.getTitle("en"), result.title(), "Titles should match"),
+                () -> assertEquals(book.getBasePrice(), result.basePrice(), "Base prices should match"),
+                () -> assertEquals(book.getDiscountPercentage(), result.discount(), "Discounts should match"),
+                () -> assertEquals(book.getCover(), result.cover(), "Covers should match"),
+                () -> assertEquals(book.calculateFinalPrice(), result.finalPrice(), "Final prices should match"),
+                () -> assertEquals(
+                        book.getAuthors().size(),
+                        result.authors().size(),
+                        "Number of authors should match"
+                )
+        );
+    }
+
+    @Test
+    @DisplayName("Test null Book returns null BookCollectionQuery")
+    void toBookCollectionQueryNull() {
+        BookCollectionQuery result = BookMapper.toBookCollectionQuery(null);
+
+        assertNull(result, "Mapping null Book should return null BookCollectionDto");
     }
 
     @Test
     @DisplayName("Test map list of BookEntity to list of Book")
     void toBookList() {
-        // Arrange
         List<BookEntity> bookEntities = List.of(
-                new BookEntity("123", "Title 1", "Synopsis 1", new BigDecimal("10.00"), 0.05, "cover1.jpg", LocalDate.of(2020, 1, 1)),
-                new BookEntity("456", "Title 2", "Synopsis 2", new BigDecimal("20.00"), 0.10, "cover2.jpg", LocalDate.of(2021, 6, 15))
+                BookData.getBookEntity(0),
+                BookData.getBookEntity(1)
         );
 
         // Act
-        List<Book> books = bookEntities.stream()
+        List<Book> result = bookEntities.stream()
                 .map(BookMapper::toBook)
                 .toList();
 
         // Assert
         assertAll(
-                () -> assertEquals(bookEntities.size(), books.size(), "List sizes should match"),
-                () -> assertEquals(bookEntities.get(0).isbn(), books.get(0).getIsbn(), "First book's ISBN should match"),
-                () -> assertEquals(bookEntities.get(1).title(), books.get(1).getTitle(), "Second book's title should match")
+                () -> assertEquals(bookEntities.size(), result.size(), "List sizes should match"),
+                () -> assertEquals(bookEntities.getFirst().isbn(), result.getFirst().getIsbn(), "First book's ISBN should match"),
+                () -> assertEquals(bookEntities.getFirst().titleEs(), result.getFirst().getTitle("es"), "First book's title should match"),
+                () -> assertEquals(bookEntities.getFirst().synopsisEn(), result.getFirst().getSynopsis("en"), "First book's synopsis should match"),
+                () -> assertEquals(bookEntities.get(1).isbn(), result.get(1).getIsbn(), "Second book's ISBN should match"),
+                () -> assertEquals(bookEntities.getLast().titleEs(), result.get(1).getTitle("es"), "Second book's title should match"),
+                () -> assertEquals(bookEntities.getLast().synopsisEn(), result.get(1).getSynopsis("en"), "Second book's synopsis should match")
         );
     }
 
@@ -131,68 +162,55 @@ class BookMapperTest {
         List<BookEntity> bookEntities = Collections.emptyList();
 
         // Act
-        List<Book> books = bookEntities.stream()
+        List<Book> result = bookEntities.stream()
                 .map(BookMapper::toBook)
                 .toList();
 
         // Assert
-        assertTrue(books.isEmpty(), "Mapping an empty list should return an empty list");
+        assertTrue(result.isEmpty(), "Mapping an empty list should return an empty list");
     }
 
     @Test
-    @DisplayName("Test map list of Book to list of BookCollectionDto")
-    void toBookCollectionDtoList() {
-        // Arrange
-        Book book1 = new Book(
-                "123456789",
-                "Book 1",
-                "Synopsis 1",
-                new BigDecimal("30.00"),
-                0.2,
-                "cover1.jpg",
-                LocalDate.of(2020, 5, 20)
-        );
-        Book book2 = new Book(
-                "987654321",
-                "Book 2",
-                "Synopsis 2",
-                new BigDecimal("40.00"),
-                0.15,
-                "cover2.jpg",
-                LocalDate.of(2021, 8, 15)
-        );
+    @DisplayName("Test map list of Book to list of BookCollectionQuery with Locale es")
+    void toBookCollectionQueryList() {
+        when(mockLocaleProvider.getLanguage()).thenReturn("es");
+
+        Book book1 = BookData.getBooks().getFirst();
+        Book book2 = BookData.getBooks().get(1);
 
         book1.setAuthors(Collections.emptyList());
         book2.setAuthors(Collections.emptyList());
 
         List<Book> books = List.of(book1, book2);
 
-        // Act
-        List<BookCollectionQuery> dtos = books.stream()
-                .map(BookMapper::toBookCollectionDto)
+        List<BookCollectionQuery> result = books.stream()
+                .map(BookMapper::toBookCollectionQuery)
                 .toList();
 
-        // Assert
         assertAll(
-                () -> assertEquals(books.size(), dtos.size(), "List sizes should match"),
-                () -> assertEquals(books.get(0).getIsbn(), dtos.get(0).isbn(), "First book's ISBN should match"),
-                () -> assertEquals(books.get(1).getTitle(), dtos.get(1).title(), "Second book's title should match")
+                () -> assertEquals(books.size(), result.size(), "List sizes should match"),
+                () -> assertEquals(books.getFirst().getIsbn(), result.getFirst().isbn(), "First book's ISBN should match"),
+                () -> assertEquals(books.getFirst().getTitle("es"), result.getFirst().title(), "Second book's title should match"),
+                () -> assertEquals(books.get(1).getIsbn(), result.get(1).isbn(), "Second book's ISBN should match"),
+                () -> assertEquals(books.get(1).getTitle("es"), result.get(1).title(), "Second book's title should match"),
+                () -> assertEquals(books.getFirst().calculateFinalPrice(), result.getFirst().finalPrice(), "First book's final price should match"),
+                () -> assertEquals(books.get(1).calculateFinalPrice(), result.get(1).finalPrice(), "Second book's final price should match")
         );
     }
 
     @Test
-    @DisplayName("Test map empty list of Book returns empty list of BookCollectionDto")
-    void toBookCollectionDtoEmptyList() {
+    @DisplayName("Test map empty list of Book returns empty list of BookCollectionQuery")
+    void toBookCollectionQueryEmptyList() {
         // Arrange
         List<Book> books = Collections.emptyList();
 
         // Act
-        List<BookCollectionQuery> dtos = books.stream()
-                .map(BookMapper::toBookCollectionDto)
+        List<BookCollectionQuery> result = books.stream()
+                .map(BookMapper::toBookCollectionQuery)
                 .toList();
 
         // Assert
-        assertTrue(dtos.isEmpty(), "Mapping an empty list should return an empty list");
+        assertTrue(result.isEmpty(), "Mapping an empty list should return an empty list");
     }
 
 }
